--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "build": "tsc", 
+    "start": "node dist/index.js", 
+    "dev": "ts-node src/index.ts", 
+    "dev:watch": "nodemon src/index.ts" 
   },
   "keywords": [],
   "author": "",
