--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.4",
     "nodemon": "^3.1.7",
