--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "15.0.2",
