--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "15.0.2",
@@ -21,6 +23,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
+    "tailwind-merge": "^2.6.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
